--- a/app/femr/ui/views/partials/medical/tabs/treatmentTab.scala.html
+++ b/app/femr/ui/views/partials/medical/tabs/treatmentTab.scala.html
@@ -65,7 +65,10 @@
         </div>
     </div>
     <div class="form-group">
-        <label for="treatment">Treatment Given</label>
+        @*Changed text as part of requirement FEMR-186
+        Change the name of the "Treatment Given" field
+        Comment the line :: <label for="treatment">Treatment Given</label>*@
+        <label for="treatment">Procedure/Counseling</label>
         @defining(treatmentTab.getTabFieldItemByName(null, "treatment")) { treatment =>
             <input name="tabFieldItems[@treatment.getIndex].name" type="text" class="hidden" value="treatment"/>
             <textarea rows="3" name="tabFieldItems[@treatment.getIndex].value" class="form-control input-sm" placeholder="Ex: Suturing, Ultrasound, Splint, etc...">@treatment.getValue</textarea>
